fix spacing

--- a/style.css
+++ b/style.css
@@ -47,10 +47,10 @@ h4{
     float: center;
 }
 #resume{
-  /*  float: left;*/
+    float: left;
 }
 #github{
-    /*float: right;*/
+    float: right;
 }
 input {
   border: 0;
